main/sg-db.tf
resource "aws_security_group" "terra-sg-pri-db"{
    name = "terra-sg-pri-db"
    description = "terra-sg-pri-db"
    vpc_id = aws_vpc.terra-vpc.id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = [aws_security_group.terra-sg-pub-bastion.id]
}

  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}
  tags = {
      Name = "terra-sg-pri-db"
    }
}
